# project_s

./: .env_example  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: .dockerignore  Dockerfile
backend/: app.py  main.py  pipeline.py
backend/agents/: stix_agent.py  verifier_agent.py
backend/models/: verifier.py
backend/tools/: document.py  ioc_extractor.py  relationshio_builder_old.py  relationship_builder.py  stix_builder.py  stix_exporter.py
frontend/: index.html
nginx/: default.conf.template
src/project_s/: app.py  config.py  main.py  pipeline.py
src/project_s/agents/: stix_agent.py  verifier_agent.py
src/project_s/models/: extractor.py  verifier.py
src/project_s/tools/: ioc_extractor.py  relationship_builder.py  stix_builder.py  stix_exporter.py
