[project]
name = "project_s"
version = "1.1"
description = "Takes intelligence reports and create stix bundles"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.5.17",
    "fastapi>=0.136.0",
    "lancedb>=0.30.2",
    "markitdown[all]>=0.1.5",
    "openai>=2.32.0",
    "pgvector>=0.4.2",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "stix2>=3.0.2",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[project.scripts]
project_s = "project_s.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_s"]
